# rosa

./: .gitignore  README.md  config_example.py  notes.md  pyproject.toml  queries.py  rosa.errors  rosa_contrast.py  rosa_get.py  rosa_get_moment.py  rosa_give.py  rosa_give_main.py  rosa_init.py  rosa_lib.py  text.py
rosa/: router.py
rosa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
rosa/_rosa_records/: rosa.log_1765002026.74_  rosa.log_1765002511.47_  rosa.log_1765008932.65_  rosa.log_1765041127.57_  rosa.log_1765043281.85_  rosa.log_1765043581.72_  rosa.log_1765127318.02_  rosa.log_1765137686.50_  rosa.log_1765138703.18_  rosa.log_1765139079.76_  rosa.log_1765140434.67_
rosa/_xtra/: contrast_two.py  rm3.py  show.py  txt2.py
rosa/abilities/: contrast.py  get.py  get_all.py  get_surg.py  give.py  give_all.py  init.py  lib.py  queries.py  rm3.py  rosa_get_moment.py  show.py  testf.py  testx.py
rosa/add_extra/: contrast_two.py  file_diff.py  rm3.py  txt.py
rosa/add_xtra/: contrast_two.py  get_surg.py  rm3.py  rosa_get_moment.py  txt2.py
rosa/confs/: __init__.py  config_example.py  queries.py  sql_queries.py  vqueries.py
rosa/fxs/: contrast.py  diff.py  gen.py  get.py  get_all.py  get_curr.py  get_vers.py  give.py  give_all.py  init.py
rosa/guts/: analyst.py  contractor.py  dispatch.py  lib.py  technician.py
rosa/index/: indeces.db
rosa/lib/: __init__.py  analyst.py  claude.md  contractor.py  dispatch.py  err.py  index.py  opps.py  technician.py
rosa/skeleton/: contrast.py  get.py  get_all.py  give.py  give_all.py  init.py  skel.py
(+15 files in other folders)
