[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rosa"
version = "0.2.0"
description = "versioning system"
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = [
    "xxhash",
    "mysql-connector-python",
    "diff_match_patch"
]

[project.scripts]
rosa = "rosa.router:main"